<resources>
    <string name="app_name">Just homework 12</string>
    <string name="adv">Реклама</string>
    <string name="re">RE</string>
    <string name="postsAdd">Добавить</string>
    <string name="postsAddCount">Количество постов</string>
    <string name="empty" />
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="auth">Авторизоваться</string>
    <string name="goToRegister">Регистрация</string>
    <string name="register">Зарегистрироваться</string>
    <string name="auth_success">Успешная авторизация</string>
    <string name="auth_error">Ошибка</string>
    <string name="auth_checking_data">Проверяем данные</string>
    <string name="auth_title">Авторизация</string>
    <string name="password_confirmation">Повтор пароля</string>
    <string name="registration_attempt">Делаем попытку регистрации</string>
    <string name="registration">Регистрация</string>
    <string name="passwords_do_not_match">Пароли не совпадают</string>
    <string name="unknown_registration_error">Неизвестная ошибка регистрации</string>
    <string name="registration_success">Регистрация успешна</string>
    <string name="unknown_auth_error">Неизвестная ошибка авторизации</string>
    <string name="logout">Выйти</string>
    <string name="title_registration">Регистрация</string>
    <string name="title_main_screen">Основной экран</string>
    <string name="title_enter">Вход</string>
    <string name="post_creation">Создание поста</string>
    <string name="add_post">Добавить пост</string>
    <string name="enter_post_text">Введите текст поста</string>
    <string name="feed">Фид</string>
    <string name="fetching_feed">Получаем список постов</string>
    <string name="post_creation_error">Ошибка создания поста</string>
    <string name="post_creation_success">Пост создан успешно</string>
    <string name="feed_fetch_error">Ошибка загрузки фида</string>
    <string name="like_performing">Проставляется лайк/дизлайк…</string>
    <string name="like_error">Ошибка отправки лайка</string>
    <string name="add_repost">Добавить репост</string>
    <string name="enter_repost_text">Введите текст репоста</string>
    <string name="repost_performing">Создаётся репост…</string>
    <string name="repost_error">Ошибка при создании репоста</string>
    <string name="repost_success">Репост добавлен, обновите ленту</string>
    <string name="load_new_posts">Загрузить свежие посты</string>
    <string name="load_more">Загрузить ещё</string>
    <string name="update_error">Ошибка обновления</string>
    <string name="no_more_posts">Нет больше постов</string>
    <string name="add_image">add image</string>
    <string name="post_image">post image</string>
    <string name="new_post">Новый пост</string>
    <string name="new_post_creating">Создание поста</string>
    <string name="uploading_title">Загрузка изображения</string>
    <string name="uploading_content">Отправляем изображение на сервер</string>
    <string name="error_uploading">Ошибка отправки изображения на сервер</string>
    <string name="googleplay_services_unavailable">GooglePlay Services недоступны</string>
</resources>
