<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreatePostActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/postContentWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/addPost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/postContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="250dp"
            android:hint="@string/enter_post_text"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/addPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mid_margin"
        app:layout_constraintTop_toBottomOf="@id/postContentWrapper"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_add_a_photo_black_24dp"
        android:contentDescription="@string/add_image"
        />

    <ImageView
        android:id="@+id/addPhotoDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mid_margin"
        app:layout_constraintTop_toBottomOf="@id/postContentWrapper"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_done_black_24dp"
        android:contentDescription="@string/add_image"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/addPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mid_margin"
        android:text="@string/add_post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>